--- a/config/bigData.ipynb
+++ b/config/bigData.ipynb
@@ -361,7 +361,7 @@
    "source": [
     "### Title için liste içinde liste ile row, index ve  aralarındaki benzerlik oranlarınıyla beraber bir liste içine aldık.\n",
     "\n",
-    "##### Dizin ve satır numarası aynı olduğunda 1 elde ediyorduk, 0 ile değiştirdik ve daha güzel bir görünüm ile stringlerimizi ve aralarındaki benzerlikleri yazdırdık,her satır için maksimum değeri bulabilelim diye 0'a eşitledik.\n",
+    "##### Dizin ve satır numarası aynı olduğunda 1 elde ediyorduk, 0 ile değiştirdik ve aralarındaki benzerlikleri yazdırdık,her satır için maksimum değeri bulabilelim diye 0'a eşitledik.\n",
     "\n",
     "    - [(row number,index position,similarity value)]\n",
     "\n"
@@ -462,8 +462,9 @@
    "source": [
     "### Content için liste içinde liste ile row, index ve  aralarındaki benzerlik oranlarınıyla beraber bir liste içine aldık. \n",
     "\n",
-    "##### Dizin ve satır numarası aynı olduğunda 1 elde ediyorduk, 0 ile değiştirdik ve daha güzel bir görünüm ile stringlerimizi ve aralarındaki benzerlikleri yazdırdık,her satır için maksimum değeri bulabilelim diye 0'a eşitledik.\n",
-    "- [(row number,index position,similarity value)]\n"
+    "##### Dizin ve satır numarası aynı olduğunda 1 elde ediyorduk,her satır için maksimum değeri bulabilelim diye 0'a eşitledik, aralarındaki benzerlikleri yazdırdık,\n",
+    "\n",
+    "- [(row number, index position, similarity value)]\n"
    ]
   },
   {
