--- a/config/bigData.ipynb
+++ b/config/bigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,92 +63,140 @@
     "    \n",
     "    vectorizer_content = CountVectorizer(stop_words=stopwords)\n",
     "    content_matrix = vectorizer_content.fit_transform([item[0] for item in items])\n",
+    "    print(content_matrix)\n",
+    "    print(\"--------------\")\n",
+    "    content_matrix= content_matrix.reshape(1,-1)\n",
+    "    print(content_matrix)\n",
     "    \n",
-    "    similarity_content = cosine_similarity(content_matrix)\n",
+    "    # similarity_content = cosine_similarity(content_matrix)\n",
     "   \n",
     "\n",
-    "    print(\"--------------content----------------\")\n",
-    "    content_term_matrix = content_matrix.todense()\n",
-    "    df = pd.DataFrame(content_term_matrix, \n",
-    "                    columns=vectorizer_content.get_feature_names_out())\n",
-    "    print(df.head(9))\n",
+    "    # print(\"--------------content----------------\")\n",
+    "    # content_term_matrix = content_matrix.todense()\n",
+    "    # df = pd.DataFrame(content_term_matrix, \n",
+    "    #                 columns=vectorizer_content.get_feature_names_out())\n",
+    "    # print(df.head(9))\n",
     "    \n",
-    "    print(\"-------------title------------------\")\n",
-    "    doc_term_matrix = title_matrix.todense()\n",
-    "    df = pd.DataFrame(doc_term_matrix, \n",
-    "                    columns= vectorizer_title.get_feature_names_out()) \n",
-    "    print(df.head(9))\n",
+    "    # print(\"-------------title------------------\")\n",
+    "    # doc_term_matrix = title_matrix.todense()\n",
+    "    # df = pd.DataFrame(doc_term_matrix, \n",
+    "    #                 columns= vectorizer_title.get_feature_names_out()) \n",
+    "    # print(df.head(9))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------------content----------------\n",
-      "   150  15o  19  20  2018  2020  2021  2022  213  231  ...  üzerinden  şabab  \\\n",
-      "0    0    0   1   0     1     1     1     0    1    0  ...          0      0   \n",
-      "1    0    0   0   0     0     0     0     0    0    0  ...          0      0   \n",
-      "2    2    1   1   0     1     1     1     0    1    0  ...          0      0   \n",
-      "3    0    0   0   0     0     0     0     0    0    0  ...          0      0   \n",
-      "4    0    0   1   0     1     1     1     0    1    0  ...          0      0   \n",
-      "5    0    0   0   0     0     0     0     0    0    0  ...          0      0   \n",
-      "6    2    1   1   0     1     1     1     0    1    0  ...          0      0   \n",
-      "7    0    0   0   0     0     0     0     0    0    0  ...          0      0   \n",
-      "8    0    1   0   0     0     0     0     0    0    0  ...          0      0   \n",
-      "\n",
-      "   şah  şerbet  şermet  şeyi  şeyin  şubat  şunları  şöyle  \n",
-      "0    0       0       0     1      1      0        0      0  \n",
-      "1    0       0       1     0      0      0        0      1  \n",
-      "2    0       0       1     1      1      0        0      1  \n",
-      "3    0       0       1     0      0      0        0      1  \n",
-      "4    0       0       0     1      1      0        0      0  \n",
-      "5    0       0       1     0      0      0        0      1  \n",
-      "6    0       0       1     1      1      0        0      1  \n",
-      "7    0       0       1     0      0      0        0      1  \n",
-      "8    1       0       0     0      0      0        1      0  \n",
-      "\n",
-      "[9 rows x 523 columns]\n",
-      "-------------title------------------\n",
-      "   bölge  dakika  doğrusöz  emanet  gazetesi  gedik  gedikali  gelecek  \\\n",
-      "0      0       0         0       0         0      1         0        0   \n",
-      "1      0       0         0       0         0      1         0        0   \n",
-      "2      0       0         0       0         0      1         0        0   \n",
-      "3      0       0         0       0         0      1         0        0   \n",
-      "4      0       0         1       0         1      1         0        0   \n",
-      "5      0       0         1       0         1      1         0        0   \n",
-      "6      0       0         1       0         1      1         0        0   \n",
-      "7      0       0         0       0         0      1         0        0   \n",
-      "8      0       0         0       0         0      1         0        0   \n",
-      "\n",
-      "   gündemi  güven  ...  nda  odası  partisi  sebzeciler  sebzecilerden  son  \\\n",
-      "0        0      1  ...    1      1        0           1              0    0   \n",
-      "1        0      1  ...    1      1        0           1              0    0   \n",
-      "2        0      1  ...    1      1        0           1              0    0   \n",
-      "3        0      1  ...    1      1        0           1              0    0   \n",
-      "4        0      0  ...    0      0        0           0              1    0   \n",
-      "5        0      0  ...    0      0        0           0              1    0   \n",
-      "6        0      0  ...    0      0        0           0              1    0   \n",
-      "7        0      1  ...    1      1        0           1              0    0   \n",
-      "8        0      1  ...    1      1        0           1              0    0   \n",
-      "\n",
-      "   tazeledi  ye  yücel  şehir  \n",
-      "0         1   0      0      0  \n",
-      "1         1   0      0      0  \n",
-      "2         1   0      0      0  \n",
-      "3         1   0      0      0  \n",
-      "4         0   0      0      0  \n",
-      "5         0   0      0      0  \n",
-      "6         0   0      0      0  \n",
-      "7         1   0      0      0  \n",
-      "8         1   0      0      0  \n",
-      "\n",
-      "[9 rows x 25 columns]\n"
+      "  (0, 374)\t1\n",
+      "  (0, 302)\t1\n",
+      "  (0, 328)\t1\n",
+      "  (0, 300)\t1\n",
+      "  (0, 61)\t1\n",
+      "  (0, 480)\t1\n",
+      "  (0, 167)\t1\n",
+      "  (0, 70)\t2\n",
+      "  (0, 134)\t1\n",
+      "  (0, 481)\t1\n",
+      "  (0, 186)\t2\n",
+      "  (0, 459)\t2\n",
+      "  (0, 406)\t1\n",
+      "  (0, 486)\t1\n",
+      "  (0, 324)\t2\n",
+      "  (0, 510)\t3\n",
+      "  (0, 104)\t1\n",
+      "  (0, 455)\t1\n",
+      "  (0, 334)\t2\n",
+      "  (0, 485)\t3\n",
+      "  (0, 215)\t1\n",
+      "  (0, 52)\t1\n",
+      "  (0, 217)\t1\n",
+      "  (0, 423)\t1\n",
+      "  (0, 46)\t1\n",
+      "  :\t:\n",
+      "  (21, 190)\t1\n",
+      "  (21, 362)\t1\n",
+      "  (21, 43)\t1\n",
+      "  (21, 292)\t1\n",
+      "  (21, 67)\t1\n",
+      "  (21, 191)\t1\n",
+      "  (21, 418)\t1\n",
+      "  (21, 142)\t1\n",
+      "  (21, 236)\t1\n",
+      "  (21, 378)\t1\n",
+      "  (21, 497)\t1\n",
+      "  (21, 472)\t1\n",
+      "  (21, 76)\t1\n",
+      "  (21, 433)\t1\n",
+      "  (21, 283)\t1\n",
+      "  (21, 50)\t1\n",
+      "  (21, 440)\t1\n",
+      "  (21, 45)\t1\n",
+      "  (21, 301)\t1\n",
+      "  (21, 103)\t1\n",
+      "  (21, 44)\t1\n",
+      "  (21, 49)\t1\n",
+      "  (21, 226)\t1\n",
+      "  (21, 118)\t1\n",
+      "  (21, 157)\t1\n",
+      "--------------\n",
+      "  (0, 374)\t1\n",
+      "  (0, 302)\t1\n",
+      "  (0, 328)\t1\n",
+      "  (0, 300)\t1\n",
+      "  (0, 61)\t1\n",
+      "  (0, 480)\t1\n",
+      "  (0, 167)\t1\n",
+      "  (0, 70)\t2\n",
+      "  (0, 134)\t1\n",
+      "  (0, 481)\t1\n",
+      "  (0, 186)\t2\n",
+      "  (0, 459)\t2\n",
+      "  (0, 406)\t1\n",
+      "  (0, 486)\t1\n",
+      "  (0, 324)\t2\n",
+      "  (0, 510)\t3\n",
+      "  (0, 104)\t1\n",
+      "  (0, 455)\t1\n",
+      "  (0, 334)\t2\n",
+      "  (0, 485)\t3\n",
+      "  (0, 215)\t1\n",
+      "  (0, 52)\t1\n",
+      "  (0, 217)\t1\n",
+      "  (0, 423)\t1\n",
+      "  (0, 46)\t1\n",
+      "  :\t:\n",
+      "  (0, 11173)\t1\n",
+      "  (0, 11345)\t1\n",
+      "  (0, 11026)\t1\n",
+      "  (0, 11275)\t1\n",
+      "  (0, 11050)\t1\n",
+      "  (0, 11174)\t1\n",
+      "  (0, 11401)\t1\n",
+      "  (0, 11125)\t1\n",
+      "  (0, 11219)\t1\n",
+      "  (0, 11361)\t1\n",
+      "  (0, 11480)\t1\n",
+      "  (0, 11455)\t1\n",
+      "  (0, 11059)\t1\n",
+      "  (0, 11416)\t1\n",
+      "  (0, 11266)\t1\n",
+      "  (0, 11033)\t1\n",
+      "  (0, 11423)\t1\n",
+      "  (0, 11028)\t1\n",
+      "  (0, 11284)\t1\n",
+      "  (0, 11086)\t1\n",
+      "  (0, 11027)\t1\n",
+      "  (0, 11032)\t1\n",
+      "  (0, 11209)\t1\n",
+      "  (0, 11101)\t1\n",
+      "  (0, 11140)\t1\n"
      ]
     }
    ],
@@ -1254,7 +1302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
